Support upstream DPDK in Dockerfile (#1261)
<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

* **New Features**
* DPDK is now the default manager; GPUNetIO and Rivermax remain
available via explicit targets.
* CUDA toolkit/driver support added to build targets with GPU build
properties.

* **Chores**
* Container build reorganized into base, DPDK, GPUNetIO and Rivermax
stages; base layer adds RDMA and Python test tooling; upstream DPDK
build added.
  * DOCA-related defaults clarified and moved out of the default path.

* **Documentation**
* README expanded with MOFED/driver/kernel delivery options and
user-space library notes.

* **Bug Fixes**
  * Struct packing updated to ensure correct binary layout.

<sub>✏️ Tip: You can customize this high-level summary in your review
settings.</sub>
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

---------

Signed-off-by: Cliff Burdick <cburdick@nvidia.com>
Signed-off-by: Cliff Burdick <30670611+cliffburdick@users.noreply.github.com>
Signed-off-by: Alexis Girault <agirault@users.noreply.github.com>
Co-authored-by: Alexis Girault <agirault@users.noreply.github.com>
Co-authored-by: greptile-apps[bot] <165735046+greptile-apps[bot]@users.noreply.github.com>
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/operators/advanced_network/advanced_network/CMakeLists.txt
+++ b/operators/advanced_network/advanced_network/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2023 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -20,6 +20,7 @@ find_package(holoscan 2.6 REQUIRED CONFIG
              PATHS "/opt/nvidia/holoscan" "/workspace/holoscan-sdk/install") # Remove if holoscan logger dependency removed
 
 find_package(PkgConfig)
+find_package(CUDAToolkit REQUIRED)
 
 enable_language(CUDA)
 
@@ -28,12 +29,7 @@ set(CMAKE_CUDA_ARCHITECTURES "80;90")
 
 add_compile_definitions(ALLOW_EXPERIMENTAL_API)
 add_compile_definitions(DOCA_ALLOW_EXPERIMENTAL_API)
-
-execute_process(COMMAND arch OUTPUT_VARIABLE ARCH)
-string(STRIP ${ARCH} ARCH)
-set(DPDK_PATH /opt/mellanox/dpdk)
 set(DOCA_PATH /opt/mellanox/doca)
-set(ENV{PKG_CONFIG_PATH} "$ENV{PKG_CONFIG_PATH}:${DPDK_PATH}/lib/${ARCH}-linux-gnu/pkgconfig:${DOCA_PATH}/lib/${ARCH}-linux-gnu/pkgconfig:/opt/mellanox/flexio/lib/pkgconfig:/opt/mellanox/collectx/lib/${ARCH}-linux-gnu/pkgconfig")
 
 # Common library
 add_library(advanced_network_common SHARED
@@ -71,8 +67,10 @@ install(
 # Backend libraries
 if(NOT DEFINED ANO_MGR)
     # Initialize ANO_MGR with a default if not provided
-    # Note: rivermax not added to the default list yet since it requires licensing
-    set(ANO_MGR "dpdk gpunetio" CACHE STRING "Manager type(s) list")
+    # Default: dpdk only (no DOCA dependency)
+    # Add "gpunetio" to enable GPU-accelerated networking (requires DOCA)
+    # Note: rivermax not added to the default list since it requires licensing
+    set(ANO_MGR "dpdk" CACHE STRING "Manager type(s) list")
 endif()
 separate_arguments(ANO_MGR_LIST UNIX_COMMAND ${ANO_MGR})
 
