--- a/operators/advanced_network/advanced_network/managers/dpdk/CMakeLists.txt
+++ b/operators/advanced_network/advanced_network/managers/dpdk/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2023 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -20,37 +20,37 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 target_sources(${PROJECT_NAME} PRIVATE adv_network_dpdk_mgr.cpp adv_network_dpdk_stats.cpp)
 
+# Try to find DPDK via pkg-config
+# This will find upstream DPDK (installed to /usr/local) or mlnx-dpdk
 pkg_check_modules(DPDK QUIET libdpdk)
 
 if(NOT DPDK_FOUND)
-  message(STATUS "Looking for DPDK in alternative directories")
-  set(ENV{PKG_CONFIG_PATH} /opt/mellanox/dpdk/lib/x86_64-linux-gnu/pkgconfig/)
+  # Fallback: try to find mlnx-dpdk in standard Mellanox installation paths
+  message(STATUS "Looking for DPDK in Mellanox installation directories")
+  # Try to find DPDK via pkg-config
+  # Note: adding the following so it can find both upstream DPDK (installed to /usr/local) but also mlnx-dpdk (in `/opt/mellanox/dpdk`)
+  list(APPEND CMAKE_PREFIX_PATH "/opt/mellanox/dpdk/lib/${CMAKE_HOST_SYSTEM_PROCESSOR}-linux-gnu/")
   pkg_check_modules(DPDK REQUIRED libdpdk)
-
-  target_link_directories(${PROJECT_NAME} PUBLIC ${DPDK_LIBRARY_DIRS})
-  target_include_directories(${PROJECT_NAME} PUBLIC ${DPDK_INCLUDE_DIRS})
-  target_compile_options(${PROJECT_NAME} PUBLIC ${DPDK_CFLAGS_OTHER})
-  target_link_libraries(${PROJECT_NAME}
-    PUBLIC
-      ${DPDK_LDFLAGS_OTHER}
-      ${DPDK_LIBRARIES}
-    PRIVATE
-      holoscan::core
-      CUDA::cudart
-  )
-else() # Upstream DPDK
-  set(DPDK_EXTRA_LIBS -Wl,--no-whole-archive -lmlx5 -libverbs -pthread -lnuma -ldl)
-  target_link_directories(${PROJECT_NAME} PUBLIC ${DPDK_LIBRARY_DIRS})
-  target_link_libraries(${PROJECT_NAME}
-    PUBLIC
-      ${DPDK_LDFLAGS_OTHER}
-      ${DPDK_LIBRARIES}
-      ${DPDK_EXTRA_LIBS}
-    PRIVATE
-      holoscan::core
-      CUDA::cudart
-  )
+  message(STATUS "Found DPDK: ${DPDK_VERSION} in ${DPDK_LIBRARY_DIRS}")
 endif()
+
+# Common DPDK configuration
+target_link_directories(${PROJECT_NAME} PUBLIC ${DPDK_LIBRARY_DIRS})
+target_include_directories(${PROJECT_NAME} PUBLIC ${DPDK_INCLUDE_DIRS})
+target_compile_options(${PROJECT_NAME} PUBLIC ${DPDK_CFLAGS_OTHER})
+
+# Link libraries - add extra libs for Mellanox NIC support
+set(DPDK_EXTRA_LIBS -Wl,--no-whole-archive -lmlx5 -libverbs -pthread -lnuma -ldl)
+target_link_libraries(${PROJECT_NAME}
+  PUBLIC
+    ${DPDK_LDFLAGS_OTHER}
+    ${DPDK_LIBRARIES}
+    ${DPDK_EXTRA_LIBS}
+  PRIVATE
+    holoscan::core
+    CUDA::cudart
+    CUDA::cuda_driver
+)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(${PROJECT_NAME} PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)
