--- a/operators/advanced_network/advanced_network/managers/gpunetio/CMakeLists.txt
+++ b/operators/advanced_network/advanced_network/managers/gpunetio/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2023 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -64,6 +64,8 @@ target_link_directories(${PROJECT_NAME} PUBLIC ${DOCA_LIBRARY_DIRS})
 target_link_libraries(${PROJECT_NAME}
   PRIVATE
     holoscan::core
+    CUDA::cudart
+    CUDA::cuda_driver
     -ldoca_gpunetio
     -ldoca_gpunetio_device # static
     -ldoca_eth
