--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -1,3 +1,3 @@
-filter=-build/header_guard,-readability/todo,-runtime/references,-build/c++11,-runtime/int,-build/include_subdir,-build/namespaces,-readability/casting,-build/include,-runtime/threadsafe_fn
+filter=-build/header_guard,-readability/todo,-runtime/references,-build/c++11,-build/c++17,-runtime/int,-build/include_subdir,-build/namespaces,-readability/casting,-build/include,-runtime/threadsafe_fn,-whitespace/newlinegit
 exclude_files=\.cache|build|build-|install|data
 linelength=100
