Fix exlude files logic
Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -1,3 +1,2 @@
-filter=-build/header_guard,-readability/todo,-runtime/references,-build/c++11,-build/c++17,-runtime/int,-build/include_subdir,-build/namespaces,-readability/casting,-build/include,-runtime/threadsafe_fn,-whitespace/newline,-whitespace/indent_namespace,-readability/nolint
-exclude_files=\.cache|build|build-|install|data
+filter=-build/header_guard,-readability/todo,-runtime/references,-build/c++11,-build/c++17,-runtime/int,-build/include_subdir,-build/namespaces,-readability/casting,-build/include,-runtime/threadsafe_fn,-whitespace/indent_namespace,-readability/nolint
 linelength=100
