--- a/applications/depth_anything_v2/Dockerfile
+++ b/applications/depth_anything_v2/Dockerfile
@@ -45,7 +45,7 @@ RUN git clone --depth 1 https://github.com/DepthAnything/Depth-Anything-V2.git \
     && mv depth-anything-tensorrt/depth_anything_v2/dpt.py Depth-Anything-V2/depth_anything_v2 \
     && mv depth-anything-tensorrt/depth_anything_v2/export_v2.py Depth-Anything-V2
 
-RUN pip install onnx onnx-graphsurgeon onnxscript \
+RUN pip install onnx==1.19.1 onnx-graphsurgeon==0.5.8 onnxscript==0.5.6 \
     && pip install -r Depth-Anything-V2/requirements.txt
 
 # Change to the repository directory
