--- a/operators/advanced_network/Dockerfile
+++ b/operators/advanced_network/Dockerfile
@@ -118,7 +118,7 @@ FROM base-deps AS dpdk
 ARG DPDK_VERSION=24.11.3
 ARG DPDK_BUILD_DIR=/opt/dpdk-build
 ARG DPDK_INSTALL_PREFIX=/usr/local
-ARG DOCA_VERSION=3.2.0
+ARG DOCA_VERSION=3.2.1
 
 
 # - infiniband-diags for IB diagnostics
@@ -191,6 +191,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         mlnx-ofed-kernel-utils \
     && rm -rf /var/lib/apt/lists/*
 
+RUN git clone https://github.com/NVIDIA/gdrcopy.git /opt/mellanox/gdrcopy \
+    && cd /opt/mellanox/gdrcopy \
+    && make lib
+
+ENV GDRCOPY_PATH_L=/opt/mellanox/gdrcopy/src
 
 # ==============================
 # Rivermax Target
