--- a/applications/deltacast_receiver/CMakeLists.txt
+++ b/applications/deltacast_receiver/CMakeLists.txt
@@ -17,3 +17,7 @@ cmake_minimum_required(VERSION 3.20)
 project(deltacast_receiver_apps LANGUAGES NONE)
 
 add_subdirectory(cpp)
+
+if(HOLOHUB_BUILD_PYTHON)
+  add_subdirectory(python)
+endif()
