--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -1,3 +1,3 @@
 filter=-build/header_guard,-readability/todo,-runtime/references,-build/c++11,-build/c++17,-runtime/int,-build/include_subdir,-build/namespaces,-readability/casting,-build/include,-runtime/threadsafe_fn,-whitespace/newline,-whitespace/indent_namespace,-readability/nolint
-exclude_files=\.cache|\.local|build|build-*|install|install-*|data|data-*|.vscode-server
+exclude_files=\.cache|\.local|build|build-*|install|install-*|data|data-*|\.vscode-server|\.ruff_cache
 linelength=100
