Address PR feedback
Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/applications/object_detection_torch/Dockerfile
+++ b/applications/object_detection_torch/Dockerfile
@@ -49,9 +49,9 @@ RUN if [ "${GPU_TYPE}" = "igpu" ]; then \
     else \
         CUDA_MAJOR=$(nvcc --version | grep -o "release [0-9]*" | awk '{print $2}'); \
         if [ "$CUDA_MAJOR" = "13" ]; then \
-            PYTORCH_WHEEL_VERSION="2.9.0+cu130"; \
-            TORCHVISION_WHEEL_VERSION="0.23.0+cu130"; \
-            INDEX_URL="https://download.pytorch.org/whl/"; \
+            echo "ERROR: Missing support for CUDA 13.x with PyTorch 2.9.0, torchvision 0.24.0." \
+                " Please refer to the README for more information."; \
+            exit 1; \
         else \
             PYTORCH_WHEEL_VERSION="2.8.0+cu129"; \
             TORCHVISION_WHEEL_VERSION="0.23.0+cu129"; \
@@ -59,7 +59,11 @@ RUN if [ "${GPU_TYPE}" = "igpu" ]; then \
         fi; \
     fi; \
     echo "Installing torch==${PYTORCH_WHEEL_VERSION} from $INDEX_URL"; \
-    python3 -m pip install --force-reinstall torch==${PYTORCH_WHEEL_VERSION} torchvision==${TORCHVISION_WHEEL_VERSION} torchaudio --index-url $INDEX_URL; \
+    python3 -m pip install --force-reinstall \
+        --index-url $INDEX_URL \
+        torch==${PYTORCH_WHEEL_VERSION} \
+        torchvision==${TORCHVISION_WHEEL_VERSION}\
+        torchaudio; \
     if ! find /usr/local/lib/python3.12/dist-packages/torch -name libtorch_cuda.so | grep -q .; then \
         echo "libtorch_cuda.so not found, torch installation failed"; \
         exit 1; \
