--- a/applications/holochat/requirements.txt
+++ b/applications/holochat/requirements.txt
@@ -6,6 +6,8 @@ httpx==0.28.*
 httpx-sse==0.4.*
 langchain==1.2.*
 langchain-community==0.3.*
+langchain-huggingface==1.2.*
+langchain-chroma==1.1.*
 langchain-text-splitters==0.3.*
 mcp==1.24.*
 numpy==2.3.*
