update NVIDIA NIM model to llama-3.3-70b-instruct
Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/applications/holochat/config.yaml
+++ b/applications/holochat/config.yaml
@@ -23,7 +23,7 @@ max_prompt_tokens: 3000
 local_llm_url: "http://127.0.0.1:8080/v1"
 nim_url: "https://integrate.api.nvidia.com/v1"
 
-nim_model: "meta/llama3-70b-instruct"
+nim_model: "meta/llama-3.3-70b-instruct"
 local_model: "phind/phind-codellama-34b-v2"
 
 server_timeout: 60
