Fix and Enhance HoloChat Application (#1312)
<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

* **New Features**
* Cloud NIM API mode with setup/examples; added HOLOSCAN_INPUT_PATH
(default data dir).
  * MCP run shorthand and configurable MCP server port.

* **Improvements**
* More reliable local LLM startup with health checks, autoretry and
model re-download.
* CUDA-enabled local model build workflow and updated local model
source.
* Robust cache/Chroma DB handling for read-only mounts with writable
fallbacks.
  * UI migrated to Gradio 6.x.

* **Documentation**
* README restructured into Quick Start, Running Instructions, and clear
mode guides.

* **Chores**
  * Updated dependency set and default model reference.

<sub>✏️ Tip: You can customize this high-level summary in your review
settings.</sub>
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

---------

Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

--- a/applications/holochat/requirements.txt
+++ b/applications/holochat/requirements.txt
@@ -1,20 +1,26 @@
-langchain==0.1.11
-sentence_transformers~=4.1.0
-GitPython~=3.1.0
-gradio==5.35.*
-pypdf~=3.17.4
-requests==2.*
-chromadb~=1.0.8
-openai~=1.30.2
-tiktoken~=0.6.0
-mcp==1.10.*
-pydantic-core==2.27.2
-starlette>=0.36.0
-uvicorn>=0.27.0
-anyio>=4.2.0
-httpx~=0.27.2
-httpx-sse>=0.4.0
-numpy==1.26.*
-scipy==1.15.*
-transformers==4.55.*
-safetensors==0.5.*
+anyio==4.12.*
+chromadb==1.3.*
+GitPython==3.1.*
+gradio==6.1.*
+httpx==0.28.*
+httpx-sse==0.4.*
+langchain==1.2.*
+langchain-community==0.3.*
+langchain-huggingface==1.2.*
+langchain-chroma==1.1.*
+langchain-text-splitters==0.3.*
+mcp==1.24.*
+numpy==2.3.*
+openai==2.13.*
+pydantic-core==2.41.*
+pypdf==6.4.*
+PyYAML==6.0.*
+requests==2.32.*
+safetensors==0.7.*
+scipy==1.16.*
+sentence_transformers==5.2.*
+starlette==0.50.*
+tiktoken==0.12.*
+torch==2.9.*
+transformers==4.57.*
+uvicorn==0.38.*
