App: Update Ultrasound Postprocessing for HoloHub CLI compatibility
Notable changes:
- Add Dockerfile and metadata.json for Ultrasound PostProcessing module and filter
  development
  - Mode preset support for filter design, Holoscan pipeline runtime,
    and module CLI
  - Update runtime entrypoint to support default container preset
    pathing
- Add minimum CMake and CTest support for standard coverage
  - Note the demo.uff data file is currently private and must be
    pre-populated in the data directory for testing
- Update README user and developer documentation, including wheel
  installation with Git
  - Note that "pip install git+..." clones the entire repository before
    installing the wheel from subfolder

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/applications/ultrasound_postprocessing/pyproject.toml
+++ b/applications/ultrasound_postprocessing/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "pyuff-ustb",
     "streamlit",
     "pyyaml",
-    "holoscan>=3.7.0",
+    "holoscan-cu13>=3.9.0",
 ]
 
 [project.optional-dependencies]
@@ -19,15 +19,18 @@ dev = [
     "pytest",
     "ruff",
     "mypy",
+    "pytest",
+    "gdown"
 ]
-# Optional HoloScan runtime integration (Step 6+). Not required for Streamlit UI.
+# Optional Holoscan runtime integration (Step 6+). Not required for Streamlit UI.
 holoscan = [
-    "holoscan>=2.3.0; platform_system == 'Linux'",
+    "holoscan-cu13>=3.9.0; platform_system == 'Linux'",
 ]
 
 # Convenience meta-extra to install all optionals used by developers
 all = [
-    "holoscan>=2.3.0; platform_system == 'Linux'",
+    "us-post-processing[dev]",
+    "us-post-processing[holoscan]",
 ]
 
 [project.scripts]
