--- a/workflows/CMakeLists.txt
+++ b/workflows/CMakeLists.txt
@@ -14,9 +14,7 @@
 # limitations under the License.
 
 # Make sure to order by alphabetical list
-set(HOLOSCAN_OPERATORS
-        aja_source
-        orsi_format_converter
-        orsi_segmentation_preprocessor
-)
-add_holohub_application(ai_surgical_video DEPENDS OPERATORS ${HOLOSCAN_OPERATORS})
+add_holohub_application(ai_surgical_video DEPENDS
+                        OPERATORS orsi_format_converter
+                                  orsi_segmentation_preprocessor
+                        OPTIONAL  aja_source)
