Add bci visualization app including reconstruction + volume rendering
Signed-off-by: Mimi Liao <mimil@nvidia.com>

--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -25,6 +25,9 @@ add_holohub_application(async_buffer_deadline)
 add_holohub_application(basic_networking_ping DEPENDS
                         OPERATORS basic_network)
 
+add_holohub_application(bci_visualization DEPENDS
+                        OPERATORS volume_renderer)
+
 add_holohub_application(body_pose_estimation DEPENDS
                         OPERATORS OPTIONAL dds_video_subscriber dds_video_publisher)
 
