App: Fix object_detection_torch container build with Python != 3.12
Updates the object_detection_torch application build check for
"libtorch_cuda.so" installation to use the default Python3 site path for
torch import check.

Previous check enforced Python 3.12, which failed when building with
iGPU container with Python 3.10.

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/applications/object_detection_torch/Dockerfile
+++ b/applications/object_detection_torch/Dockerfile
@@ -64,7 +64,7 @@ RUN if [ "${GPU_TYPE}" = "igpu" ]; then \
         torch==${PYTORCH_WHEEL_VERSION} \
         torchvision==${TORCHVISION_WHEEL_VERSION} \
         torchaudio; \
-    if ! find /usr/local/lib/python3.12/dist-packages/torch -name libtorch_cuda.so | grep -q .; then \
+    if ! find $(python3 -c "import torch; print(torch.__path__[0])") -name libtorch_cuda.so | grep -q .; then \
         echo "libtorch_cuda.so not found, torch installation failed"; \
         exit 1; \
     fi
