Style: Update Dockerfile syntax for consistency across applications
Changed the 'as' keyword to 'AS' in multiple Dockerfiles to maintain uniformity
in the base image declaration across various applications.

It addresses warnings like the following:

```
 - FromAsCasing: 'as' and 'FROM' keywords' casing do not match
```

Signed-off-by: JC Fillion-Robin <jcfr@nvidia.com>

--- a/applications/cvcuda_basic/Dockerfile
+++ b/applications/cvcuda_basic/Dockerfile
@@ -26,7 +26,7 @@ ARG GPU_TYPE
 ############################################################
 # CV-CUDA Downloader
 ############################################################
-FROM ${BASE_IMAGE} as cvcuda-install
+FROM ${BASE_IMAGE} AS cvcuda-install
 
 ARG DEBIAN_FRONTEND=noninteractive
 
