--- a/applications/ehr_query_llm/lmm/Dockerfile
+++ b/applications/ehr_query_llm/lmm/Dockerfile
@@ -21,7 +21,7 @@ ARG TARGETARCH
 ############################################################
 # Base image
 ############################################################
-FROM ${BASE_IMAGE} as base
+FROM ${BASE_IMAGE} AS base
 ARG DEBIAN_FRONTEND=noninteractive
 #
 # Holohub dev setup
