--- a/applications/sam2/alternative_docker/Dockerfile
+++ b/applications/sam2/alternative_docker/Dockerfile
@@ -21,12 +21,12 @@ ARG COMPUTE_CAPACITY
 ############################################################
 # Torch image (Used to extract the ARM64 dGPU pytorch wheel)
 ############################################################
-FROM nvcr.io/nvidia/pytorch:24.06-py3 as pytorch
+FROM nvcr.io/nvidia/pytorch:24.06-py3 AS pytorch
 
 ############################################################
 # Base image
 ############################################################
-FROM ${BASE_IMAGE} as base
+FROM ${BASE_IMAGE} AS base
 ARG DEBIAN_FRONTEND=noninteractive
 
 # Holohub dev setup
